<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.example</groupId>
  <artifactId>homework6Wiremock</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - homework6Wiremock</name>
  <url>http://maven.apache.org</url>
  <properties>
    <java.version>17</java.version>
    <spring-cloud.version>2023.0.2</spring-cloud.version>
    <aspectj.version>1.8.10</aspectj.version>
    <testNg/>
  </properties>
  <profiles>
    <profile>
      <id>serviceTests</id>
      <properties>
        <testNg>src/main/resources/realServiceTests.xml</testNg>
      </properties>
    </profile>
    <profile>
      <id>mockTests</id>
      <properties>
        <testNg>src/main/resources/mockTests.xml</testNg>
      </properties>
    </profile>
  </profiles>
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.26</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.7.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.wiremock</groupId>
      <artifactId>wiremock-standalone</artifactId>
      <version>3.6.0</version>
    </dependency>
    <dependency>
      <groupId>org.wiremock</groupId>
      <artifactId>wiremock-jetty12</artifactId>
      <version>3.6.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.0</version>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>5.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.groovy</groupId>
      <artifactId>groovy</artifactId>
      <version>4.0.9</version>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>json-schema-validator</artifactId>
      <version>5.1.1</version>
      <exclusions><!-- https://www.baeldung.com/maven-version-collision -->
        <exclusion>
          <groupId>org.apache.groovy</groupId>
          <artifactId>groovy</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.groovy</groupId>
          <artifactId>groovy-xml</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
          <suiteXmlFiles>
            <suiteXmlFile>${testNg}</suiteXmlFile>
          </suiteXmlFiles>
          <properties>
            <property>
              <name>reporter</name>
              <value>
                org.testng.reporters.XMLReporter:generateTestResultAttributes=true,generateGroupsAttribute=true
              </value>
            </property>
          </properties>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>14</source>
          <target>14</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
